.gitignore is now working

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     .navbar
       .navbar-inner
         .container
-          = link_to 'Автолитмаш', root_path, class: 'brand'
+          = link_to 'Бронзовое литье', root_path, class: 'brand'
           %ul.nav
             %li= link_to 'Статьи', articles_path
             %li= link_to 'Официальный сайт', 'http://avtolitmash.ru'
